# Simple-Media-Player

./: .gitignore  AuroraPlayer.pro  CMakeLists.txt  LICENSE  LearnMediaPlayer.pro  README.md
include/: CommonState.h  CommonUtils.h  FFmpegHelper.h  FFmpegUtils.h  MainWindow.h  MediaPlayer.h  PlayerController.h
include/Simple-Media-Player/core/: MediaPlayer.h
include/Simple-Media-Player/modules/ui/: MainWindow.h
include/Simple-Media-Player/modules/utils/: Utils.h
src/: FFmpegHelper.cpp  FFmpegUtils.cpp  MainWindow.cpp  MediaPlayer.cpp  PlayerController.cpp  main.cpp
src/core/: MediaPlayer.cpp  MediaPlayer.h
src/modules/player/: PlayerController.cpp
src/modules/ui/: MainWindow.cpp
src/modules/utils/: Utils.cpp
src/player/: PlayerController.cpp  PlayerController.h  PlaylistManager.cpp  PlaylistManager.h
src/ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui
src/utils/: Utils.cpp  Utils.h
